--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,34 @@
-fastapi
-uvicorn
-python-multipart
-pdfplumber
-python-docx
-requests
-
-pytest
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cryptography==45.0.5
+fastapi==0.116.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+lxml==6.0.0
+packaging==25.0
+pdfminer.six==20250506
+pdfplumber==0.11.7
+pillow==11.3.0
+pluggy==1.6.0
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pypdfium2==4.30.1
+pytest==8.4.1
+python-docx==1.2.0
+python-multipart==0.0.20
+requests==2.32.4
+sniffio==1.3.1
+starlette==0.47.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.35.0
